<resources>
    <string name="app_name">NewIntentResponseBundle</string>
    <string name="maintvTitle">Explicit Intent</string>

    <string name="mainbtngosub">버튼을 눌러 입력해주세요</string>
    <string name="subtvTitle">Explicit Intent Sub</string>
    <string name="subetname">이름을 입력하세요</string>
    <string name="subetage">나이를 입력하세요</string>
    <string name="subbtngomain">메인화면으로</string>

    <string name="maintvname">이름</string>
    <string name="maintvage">나이</string>

</resources>
