<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".subActivity">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/subtvTitle"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="@string/subtvTitle"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/subetname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/subetname"
                android:inputType="textPersonName"
                android:text="Name" />

            <EditText
                android:id="@+id/subetage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/subetage"
                android:inputType="textPersonName"
                android:text="Name" />

            <Button
                android:id="@+id/subbtngomain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subbtngomain" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>