<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/maintvTitle"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="@string/maintvTitle"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/maintvname"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="@string/maintvname"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/maintvage"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="@string/maintvage"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/mainbtngosub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mainbtngosub"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>